--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.1.0",
+    "@angular/cdk": "~7.2.1",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
-    "@angular/http": "^7.1.4",
+    "@angular/material": "^7.2.1",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
-    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
-    "ngx-bootstrap": "^3.1.3",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
