--- a/client/angular.json
+++ b/client/angular.json
@@ -26,7 +26,9 @@
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/go.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -83,7 +85,9 @@
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "src/assets/go.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
