--- a/client/angular.json
+++ b/client/angular.json
@@ -20,14 +20,17 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              { "glob": "**/*", "input": "./node_modules/mxgraph/javascript/src", "output": "/assets/mxgraph" }
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
             "scripts": [
-              "src/assets/go.js"
+              "src/assets/go.js",
+              "src/assets/mxgraph.conf.js",
+              "node_modules/mxgraph/javascript/mxClient.js"
             ]
           },
           "configurations": {
