--- a/client/package.json
+++ b/client/package.json
@@ -26,13 +26,14 @@
     "auth0-js": "^9.8.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "mxgraph": "^3.9.12",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.0",
+    "@angular-devkit/build-angular": "^0.12.2",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
